--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "prthg-ts",
-    "version": "1.0.0.20230726-ALPHA",
+    "version": "1.0.0.20230727",
     "description": "prthg-ts typescript library",
     "scripts": {
         "test": "echo \"Error: no default test\" && exit 1",
