--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,12 +22,13 @@
         "./node_modules/**",
         "./src/**/*.cc",
         "./src/**/*.h",
-        "./src/prthgts/test/**/*.min.js",
-        "./src/prthgts/test/**/*.umd.js"
+        "./src/test/**/*.min.js",
+        "./src/test/**/*.umd.js"
     ],
     "include": [
         "./src/**/*.d.ts",
         "./src/**/*.ts",
-        "./src/**/*.js"
+        "./src/**/*.js",
+        "./test/**/*.ts"
     ]
 }
