--- a/.gitignore
+++ b/.gitignore
@@ -35,10 +35,16 @@
 ##
 /.vscode/launch.json
 /.vscode/settings.json
-/.vscode/task.json
+/.vscode/tasks.json
 
 /pnpm-lock.yaml
 /package-lock.json
 /yarn.lock
 
 /src/prthgts/config.json
+
+##
+## test
+##
+/test/*.js
+/test/*.js.map
