--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,8 @@
         "./node_modules/**",
         "./src/**/*.cc",
         "./src/**/*.h",
+        "./src/test/**/*.cjs",
+        "./src/test/**/*.min.js",
         "./src/test/**/*.min.js",
         "./src/test/**/*.umd.js"
     ],
@@ -29,6 +31,7 @@
         "./src/**/*.d.ts",
         "./src/**/*.ts",
         "./src/**/*.js",
-        "./test/**/*.ts"
+        "./src/**/*.wasm",
+        "./test/**/*.ts",
     ]
 }
