--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
         "test::umd": "node ./test/main_test.umd.js",
         "build": "echo \"build keyword is reserved\" && exit 1",
         "build::test": "rollup -c ./configs/rollup.config.test.ts --bundleConfigAsCjs",
+        "watch": "echo \"watch keyword is reserved\" && exit 1",
+        "watch::cppport-wasm": "npx http-server ./static/cppport-wasm/ -p 8080",
         "_": "don't use me"
     },
     "repository": {
@@ -30,6 +32,7 @@
         "@typescript-eslint/eslint-plugin": "^6.2.0",
         "@typescript-eslint/parser": "^6.2.0",
         "eslint": "^8.45.0",
+        "http-server": "^14.1.1",
         "rollup": "^3.26.3",
         "tslib": "^2.6.1",
         "typescript": "^5.1.6"
