--- a/static/cppport-wasm/test.html.template
+++ b/static/cppport-wasm/test.html.template
@@ -23,69 +23,81 @@
             console.log("cppport-wasm: Started");
 
 
-            // const email = "foo@bar.baz";
+            const email = "foo@bar.baz";
 
-            // const password = "password123!";
-            // const passwordSalt = "superSALT321!";
+            const password = "password123!";
+            const passwordSalt = "superSALT321!";
 
-            // const message = "secret message #1 !";
-            // const initializeKeyStr = "abcdefghijklmnopqrstuvwxyz123456"; // 32
-            // const initializeKeyInt = 123456789; // 9
-            // const initializeVectorStr = "abcdefghijklmnopqrstuvwx"; // 24
-            // const initializeVectorInt = 987654321; // 9
-
-
-            // const GenerateSHA1 = Module.cwrap('GenerateSHA1', 'string', ['string']);
-            // const GenerateSHA224 = Module.cwrap('GenerateSHA224', 'string', ['string']);
-            // const GenerateSHA256 = Module.cwrap('GenerateSHA256', 'string', ['string']);
-            // const GenerateSHA384 = Module.cwrap('GenerateSHA384', 'string', ['string']);
-            // const GenerateSHA512 = Module.cwrap('GenerateSHA512', 'string', ['string']);
-            // const GenerateBLAKE2b = Module.cwrap('GenerateBLAKE2b', 'string', ['string']);
-            // const GenerateHasherSCRYPT = Module.cwrap('GenerateHasherSCRYPT', 'string', ['string','string']);
+            const message = "secret message #1 !";
+            const iKeyXChaCha20 = "abcdefghijklmnopqrstuvwxyz123456"; // 32
+            const iVecXChaCha20 = "abcdefghijklmnopqrstuvwx"; // 24
+            const iKeyAES = 123456789; // 9
+            const iVecAES = 987654321; // 9
+            const iKeyRC6 = 1234567891234567; // 16
+            const iVecRC6 = 9876543219876543; // 16
 
 
-            // const EncryptXChaCha20 = Module.cwrap('EncryptXChaCha20', 'string', ['string','string', 'string']);
-            // const DecryptXChaCha20 = Module.cwrap('DecryptXChaCha20', 'string', ['string','string', 'string']);
-
-            // const EncryptCBCAES = Module.cwrap('EncryptCBCAES', 'string', ['string','number', 'number']);
-            // const DecryptCBCAES = Module.cwrap('DecryptCBCAES', 'string', ['string','number', 'number']);
-
-
-            // const SHA1 = GenerateSHA1(email);
-            // console.log(`SHA1:\n${SHA1}`);
-
-            // const SHA224 = GenerateSHA224(email);
-            // console.log(`SHA224:\n${SHA224}`);
-
-            // const SHA256 = GenerateSHA256(email);
-            // console.log(`SHA256:\n${SHA256}`);
-
-            // const SHA384 = GenerateSHA384(email);
-            // console.log(`SHA384:\n${SHA384}`);
-
-            // const SHA512 = GenerateSHA512(email);
-            // console.log(`SHA512:\n${SHA512}`);
-
-            // const BLAKE2b = GenerateBLAKE2b(email);
-            // console.log(`BLAKE2b:\n${BLAKE2b}`);
-
-            // const SCRYPT = GenerateHasherSCRYPT(password, passwordSalt);
-            // console.log(`SCRYPT:\n${SCRYPT}`);
+            const GenerateSHA1 = Module.cwrap('GenerateSHA1', 'string', ['string']);
+            const GenerateSHA224 = Module.cwrap('GenerateSHA224', 'string', ['string']);
+            const GenerateSHA256 = Module.cwrap('GenerateSHA256', 'string', ['string']);
+            const GenerateSHA384 = Module.cwrap('GenerateSHA384', 'string', ['string']);
+            const GenerateSHA512 = Module.cwrap('GenerateSHA512', 'string', ['string']);
+            const GenerateBLAKE2b = Module.cwrap('GenerateBLAKE2b', 'string', ['string']);
+            const GenerateHasherSCRYPT = Module.cwrap('GenerateHasherSCRYPT', 'string', ['string','string']);
 
 
+            const EncryptXChaCha20 = Module.cwrap('EncryptXChaCha20', 'string', ['string','string', 'string']);
+            const DecryptXChaCha20 = Module.cwrap('DecryptXChaCha20', 'string', ['string','string', 'string']);
 
-            // const XChaCha20Enc = EncryptXChaCha20(message, initializeKeyStr, initializeVectorStr); // Invalid UTF-8 leading byte <0x....> encountered when deserializing a UTF-8 string in wasm memory to a JS string!
+            const EncryptAES = Module.cwrap('EncryptAES', 'string', ['string','number', 'number']);
+            const DecryptAES = Module.cwrap('DecryptAES', 'string', ['string','number', 'number']);
+
+            const EncryptRC6 = Module.cwrap('EncryptRC6', 'string', ['string','number','number']);
+            const DecryptRC6 = Module.cwrap('DecryptRC6', 'string', ['string','number','number']);
+
+
+            const SHA1 = GenerateSHA1(email);
+            console.log(`SHA1:\n${SHA1}`);
+
+            const SHA224 = GenerateSHA224(email);
+            console.log(`SHA224:\n${SHA224}`);
+
+            const SHA256 = GenerateSHA256(email);
+            console.log(`SHA256:\n${SHA256}`);
+
+            const SHA384 = GenerateSHA384(email);
+            console.log(`SHA384:\n${SHA384}`);
+
+            const SHA512 = GenerateSHA512(email);
+            console.log(`SHA512:\n${SHA512}`);
+
+            const BLAKE2b = GenerateBLAKE2b(email);
+            console.log(`BLAKE2b:\n${BLAKE2b}`);
+
+            const SCRYPT = GenerateHasherSCRYPT(password, passwordSalt);
+            console.log(`SCRYPT:\n${SCRYPT}`);
+
+
+
+            // const XChaCha20Enc = EncryptXChaCha20(message, iKeyXChaCha20, iVecXChaCha20); // Invalid UTF-8 leading byte <0x....> encountered when deserializing a UTF-8 string in wasm memory to a JS string!
             // console.log(`XChaCha20Enc:\n${XChaCha20Enc}`);
 
-            // const XChaChaDec = DecryptXChaCha20(XChaCha20Enc, initializeKeyStr, initializeVectorStr); // Invalid UTF-8 leading byte <0x....> encountered when deserializing a UTF-8 string in wasm memory to a JS string!
+            // const XChaChaDec = DecryptXChaCha20(XChaCha20Enc, iKeyXChaCha20, iVecXChaCha20); // Invalid UTF-8 leading byte <0x....> encountered when deserializing a UTF-8 string in wasm memory to a JS string!
             // console.log(`XChaChaDec:\n${XChaChaDec}`);
 
 
-            // const CbcAesEnc = EncryptCBCAES(message, initializeKeyInt, initializeVectorInt); // Invalid UTF-8 leading byte <0x....> encountered when deserializing a UTF-8 string in wasm memory to a JS string!
+            // const CbcAesEnc = EncryptAES(message, initializeKeyIntAes, initializeVectorIntAes); // Invalid UTF-8 leading byte <0x....> encountered when deserializing a UTF-8 string in wasm memory to a JS string!
             // console.log(`CbcAesEnc:\n${CbcAesEnc}`);
 
-            // const CbcAesDec = DecryptCBCAES(CbcAesEnc, initializeKeyInt, initializeVectorInt); // Invalid UTF-8 leading byte <0x....> encountered when deserializing a UTF-8 string in wasm memory to a JS string!
+            // const CbcAesDec = DecryptAES(CbcAesEnc, initializeKeyIntAes, initializeVectorIntAes); // Invalid UTF-8 leading byte <0x....> encountered when deserializing a UTF-8 string in wasm memory to a JS string!
             // console.log(`CbcAesDec:\n${CbcAesDec}`);
+
+
+            const RC6Enc = EncryptRC6(message, iKeyRC6, iVecRC6);
+            console.log(`RC6Enc:\n${RC6Enc}`);
+
+            const RC6Dec = DecryptRC6(RC6Enc, iKeyRC6, iVecRC6);
+            console.log(`RC6Dec:\n${RC6Dec}`);
 
 
             console.log("cppport-wasm: Finished");
