--- a/.vscode/settings.json.template
+++ b/.vscode/settings.json.template
@@ -1,11 +1,12 @@
+// NOTE: this is vscode template settings.json
 {
     "cmake.generator": "Ninja",
     "cmake.buildDirectory": "${workspaceFolder}/build/${buildType}",
     "cmake.configureSettings":
     {
-        // "CMAKE_CXX_FLAGS": "-std=c++20 -fcoroutines", // linux
-        // "CMAKE_CXX_FLAGS": "/std:c++20 /EHsc /await", // windows
         // "INC_VPCKG": true,
         // "INC_VPCKG_DIR": "D:/vcpkg",
+        // "INC_EMSDK": true,
+        // "INC_EMSDK_DIR": "D:/emsdk",
     },
 }
